<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.young.myapplication.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary1"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch1" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary2"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch2" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary3"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch3" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary4"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch4" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary5"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch5" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary6"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch6" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary7"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch7" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary8"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch8" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary9"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch9" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="48dp"
                android:textSize="24sp"
                android:text="@string/categary10"/>

            <Switch
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dp"
                android:layout_marginEnd="35dp"
                android:id="@+id/switch10" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
